@@ -6,7 +6,6 @@ import org.springframework.boot.test.autoconfigure.jdbc.AutoConfigureTestDatabas
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -25,8 +24,8 @@ class BookRepositoryTest {
         Book book = buildAndSaveBook(isbn);
 
         List<Book> books = StreamSupport
-                .stream(bookRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+            .stream(bookRepository.findAll().spliterator(), false)
+            .toList();
 
         assertNotNull(books);
         assertEquals(4, books.size());
